--- a/config/database.yml
+++ b/config/database.yml
@@ -28,4 +28,7 @@ test:
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  host: localhost
+  database: akinasport
+  username: akinasport
+  password: akinasport
